fix the whitespace submission issue and word wraps lengthy tweets

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -93,6 +93,7 @@ h4 {
 
 .tweeted-text {
   margin-left: 2%;
+  word-wrap: break-word;
 }
 
 .icon-name {
